--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <div class="logo">
                 <div class="wazirix_logo">
-                    <img src="wazirix/images/download.png" alt="logo">
+                    <img src="images/download.png" alt="logo">
 
                 </div>
             </div>
