--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!----------------------------------------------------------------------->
         <div class="content_1">
             <div class="content_1-left">
-                <img src="wazirix/images/art-line-device.b62af98e.png">
+                <img src="./images/art-line-device.b62af98e.png">
                 <div class="header-elements">
                     <h1>
                         WAZIRX IS INDIA'S MOST TRUSTED BITCOIN & CRYPTOCURRENCY EXCHANGE
@@ -62,7 +62,7 @@
                     <button><span>sign up now</span></button>
                     <div class="store">
                         <img class="store-play" src="wazirix/images/play-store.d9016fef.png">
-                        <img src="wazirix/images/app-store.92ab25ad.png">
+                        <img src="./images/app-store.92ab25ad.png">
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
 
             <div class="content_1-right">
 
-                <img src="wazirix/images/apppic.png"/>
+                <img src="./images/apppic.png"/>
 
             </div>
 
@@ -78,7 +78,7 @@
         <!------------------------------------content 3-------------------------------------------------->
         <div class="content_3">
             <div class="coin_photo">
-                <img id="image-coin" src="wazirix/images/wrxCoin..png" alt="0">
+                <img id="image-coin" src="./images/wrxCoin..png" alt="0">
             </div>
             
             <div class="indro_of_right">
