--- a/index.html
+++ b/index.html
@@ -125,43 +125,43 @@
             <div class="slider">
                 <div class="slider_track">
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_2.png" alt="">
+                        <img src="./images/scrolling/scrolling_2.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                     <div class="slide_1">
-                        <img src="wazirix/images/scrolling/scrolling_1.png" alt="">
+                        <img src="./images/scrolling/scrolling_1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
         <div class="content_5">
 
             <div class="content_4_image">
-                <img src="wazirix/images/Screenshot (28).png" alt="0">
+                <img src="./images/Screenshot (28).png" alt="0">
             </div>
         </div>
         <!---------------------------------------content_6...................................................-->
